--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <style>
 
           body {
-            background-image: url('image.jpg');
+            background-image: url('image.png');
             background-repeat: no-repeat;
             background-size: Contain;
             opacity: 0,5 ;
