--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ hr {
             <li><a href="http://localhost/SugestorAbsensi.html">Absensi</a></li>
             <li><a href="https://x.com/Altr239">Social Media</a></li>
             <li><a href="http://localhost/SugestorDownLink.html">Download</a></li>
-            <li><a href="http://localhost/Sugestor2.html">About</a></li>
+            <li><a href="Sugestor2.html.html">About</a></li>
             <li><a href="#ob">Information</a></li>
             <li style="float:right"><a href = "http://localhost/SugestorLogin.html">Login</a><li>
      </ul>
