--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ hr {
       
       
     <ul>
-            <li><a href="http://localhost/Sugestor.html">Home</a></li>
+            <li><a href="https://faiqahz239.github.io/Sugestor.github.io/">Home</a></li>
             <li><a href="http://localhost/SugestorAbsensi.html">Absensi</a></li>
             <li><a href="https://x.com/Altr239">Social Media</a></li>
             <li><a href="http://localhost/SugestorDownLink.html">Download</a></li>
