--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 
         <style>
-
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
           body {
             background-image: url('image.png');
             background-repeat: no-repeat;
