--- a/SugestorLogin.html
+++ b/SugestorLogin.html
@@ -176,7 +176,7 @@
       <div class="bottom-container">
         <div class="row">
           <div class="col">
-            <a href="http://localhost/SugestorRegister.html" style="color:white" class="btn">Sign up</a>
+            <a href="SugestorRegister.html" style="color:white" class="btn">Sign up</a>
           </div>
           <div class="col">
             <a href="#" style="color:white" class="btn">Forgot password?</a>
