--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ hr {
             <li><a href="http://localhost/SugestorDownLink.html">Download</a></li>
             <li><a href="Sugestor2.html">About</a></li>
             <li><a href="#ob">Information</a></li>
-            <li style="float:right"><a href = "SugestorLogin.html">Login</a><li>
+            <li style="float:right"><a href = "SugestorLogin.html">Masuk</a><li>
+            <li style="float:right"background-color:green"><a href = "SugestorLogin.html">Daftar</a><li>
      </ul>
      
      
