--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ hr {
     <ul>
             <li><a href="https://faiqahz239.github.io/Sugestor.github.io/">Home</a></li>
             <li><a href="SugestorAbsensi.html">Absensi</a></li>
-            <li><a href="https://x.com/Altr239">Social Media</a></li>
+            <li><a href="">Social Media</a></li>
             <li><a href="http://localhost/SugestorDownLink.html">Download</a></li>
             <li><a href="Sugestor2.html">About</a></li>
             <li><a href="#ob">Information</a></li>
